standalone-guides/kubernetes/use-helmfile-in-argocd/argocd/templates/ingresses/argocd-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx  # Ensure this matches your Ingress Controller
  rules:
  - host: argocd.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server  # Match the actual service name
            port:
              number: 443  # Ensure the service has this port exposed
